<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Floor Counter</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Stats</string>
    <string name="action_settings">Settings</string>
    <string name="Floor">floor</string>
    <string name="Direction">direction</string>
    <string name="Chrono">chrono</string>
    <string name="step_title">Steps</string>
    <string name="chrono_title">Total Time Elapsed</string>
    <string name="upFloor_title">No. of Upstairs</string>
    <string name="downFloor_title">No. of Downstairs</string>
    <string name="cal_title">Calories</string>
    <string name="met_title">Meters</string>
    <string name="play">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="lock">Lock</string>
    <string name="start">0</string>
    <string name="height_title">Height</string>
    <string name="submit">Submit</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="start_dir">---</string>
    <string name="weight_title">Weight</string>
    <string name="description">To perform the computations for the distance covered and the calories burned, please fill the following fields.</string>

</resources>
