<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#242424" >

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp" >
        
         <LinearLayout
             style="@style/grid_element"
             android:layout_column="0"
             android:layout_row="0" >
             
           <TextView
               style="@style/stats_title"
               android:id="@+id/step_title"
               android:text="@string/step_title" />
         
          <TextView
              style="@style/stats_values"
              android:id="@+id/step_counter"
              android:text="@string/start" />

        </LinearLayout>
        
        <LinearLayout
            style="@style/grid_element"
            android:layout_column="1"
            android:layout_row="0" >
        
          <TextView
              style="@style/stats_title"
              android:id="@+id/chrono_title"
              android:text="@string/chrono_title" />
        
          <Chronometer
              style="@style/stats_values"
              android:id="@+id/chrono" />
          
          </LinearLayout>
        
        <LinearLayout
            style="@style/grid_element"
            android:layout_column="0"
            android:layout_row="1" >
        
        <TextView
            style="@style/stats_title"
            android:id="@+id/upFloor_title"
            android:text="@string/upFloor_title" />
        
        <TextView
            style="@style/stats_values"
            android:id="@+id/upFloor_no"
            android:text="@string/start" />
        
        </LinearLayout>
        
        <LinearLayout
            style="@style/grid_element"
            android:layout_column="1"
            android:layout_row="1" >
        
          <TextView
              style="@style/stats_title"
              android:id="@+id/downFloor_title"
              android:text="@string/downFloor_title" />
        
          <TextView
              style="@style/stats_values"
              android:id="@+id/downFloor_no"
              android:text="@string/start" />
        
        </LinearLayout>
        
    </GridLayout>
    
    <LinearLayout
         android:orientation="vertical"
         android:id="@+id/bottom_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp" >
    
    <TextView
         style="@style/stats_title"
         android:id="@+id/description"
         android:text="@string/description" />
    
    <LinearLayout
        android:id="@+id/height_row"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
      
      	<TextView
      	    android:id="@+id/height_title"
      	    style="@style/fill_title"
      	    android:layout_width="wrap_content"
      	    android:layout_height="wrap_content"
      	    android:text="@string/height_title" />

      	<EditText
      	    android:id="@+id/height"
      	    android:layout_width="0dp"
      	    android:textColor="#FFFFFF"
      	    android:layout_height="wrap_content"
      	    android:layout_marginLeft="20dp"
      	    android:layout_weight="1"
      	    android:ems="3"
      	    android:inputType="number"
      	    android:textSize="20sp" >

      	    <requestFocus />
      	</EditText>
      
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/weight_row"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
      
      	<TextView
      	    android:id="@+id/weight_title"
      	    style="@style/fill_title"
      	    android:layout_width="wrap_content"
      	    android:layout_height="wrap_content"
      	    android:text="@string/weight_title" />

      	<EditText
      	    android:id="@+id/weight"
      	    android:layout_width="0dp"
      	    android:layout_height="wrap_content"
      	    android:layout_marginLeft="20dp"
      	    android:layout_weight="1"
      	    android:ems="3"
      	    android:inputType="number"
      	    android:textColor="#FFFFFF"
      	    android:textSize="20sp" >

      	    <requestFocus />
      	</EditText>
      
	</LinearLayout>
	
	    <LinearLayout
	        android:orientation="horizontal"
	        android:layout_width="wrap_content"
		    android:layout_marginTop="20dp"
	        android:layout_height="wrap_content" >
		
		    <RadioGroup
			        android:id="@+id/radioG"
			        android:orientation="vertical"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content" >

						    <RadioButton
						        android:id="@+id/M"
						        android:text="@string/male"
						        android:textColor="#FFFFFF" />
						
						    <RadioButton
						        android:id="@+id/F"
						        android:text="@string/female"
						        android:textColor="#FFFFFF" />

				</RadioGroup>
			    
		    <Button
		        android:id="@+id/submit"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="50dp"
		        android:text="@string/submit" />
	    
	    </LinearLayout>
    
    </LinearLayout>
	
</LinearLayout>
